backup-for-vps/iptables
# Generated by iptables-save v1.8.4 on Thu Oct 29 13:21:11 2020
*raw
:PREROUTING ACCEPT [13540:6345840]
:OUTPUT ACCEPT [11441:10064863]
COMMIT
# Completed on Thu Oct 29 13:21:11 2020
# Generated by iptables-save v1.8.4 on Thu Oct 29 13:21:11 2020
*mangle
:PREROUTING ACCEPT [13540:6345840]
:INPUT ACCEPT [13540:6345840]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [11441:10064863]
:POSTROUTING ACCEPT [11441:10064863]
COMMIT
# Completed on Thu Oct 29 13:21:11 2020
# Generated by iptables-save v1.8.4 on Thu Oct 29 13:21:11 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [11441:10064863]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -p tcp -m set --match-set block dst -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Thu Oct 29 13:21:11 2020
# Generated by iptables-save v1.8.4 on Thu Oct 29 13:21:11 2020
*nat
:PREROUTING ACCEPT [989:58720]
:INPUT ACCEPT [952:57192]
:POSTROUTING ACCEPT [305:19658]
:OUTPUT ACCEPT [367:23410]
:NETFLIX - [0:0]
#-A POSTROUTING -o ens3 -j MASQUERADE
-A OUTPUT -p tcp -m multiport --dports 80,443 -j NETFLIX
-A NETFLIX -d 8.8.8.8 -p tcp  -m multiport --dports 80,443  -j REDIRECT --to-ports 1234
#-A NETFLIX -p tcp -m set --match-set netflix dst -j REDIRECT --to-ports 1234
COMMIT
# Completed on Thu Oct 29 13:21:11 2020
