backup-for-vps/iptables-for-wg
# Generated by iptables-save v1.8.4 on Tue Jan 19 10:16:17 2021
*raw
:PREROUTING ACCEPT [4153:4893500]
:OUTPUT ACCEPT [3431:9142020]
COMMIT
# Completed on Tue Jan 19 10:16:17 2021
# Generated by iptables-save v1.8.4 on Tue Jan 19 10:16:17 2021
*mangle
:PREROUTING ACCEPT [4153:4893500]
:INPUT ACCEPT [4153:4893500]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3431:9142020]
:POSTROUTING ACCEPT [3431:9142020]
COMMIT
# Completed on Tue Jan 19 10:16:17 2021
# Generated by iptables-save v1.8.4 on Tue Jan 19 10:16:17 2021
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3415:9140530]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT
-A INPUT -s 10.0.1.0/24 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -i wg0 -j ACCEPT
-A FORWARD -o wg0 -j ACCEPT
-A OUTPUT -p tcp -m set --match-set block dst -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Tue Jan 19 10:16:17 2021
# Generated by iptables-save v1.8.4 on Tue Jan 19 10:16:17 2021
*nat
:PREROUTING ACCEPT [105:6230]
:INPUT ACCEPT [103:6146]
:POSTROUTING ACCEPT [60:4009]
:OUTPUT ACCEPT [105:6861]
:NETFLIX - [0:0]
-A POSTROUTING -o ens3 -j MASQUERADE
-A OUTPUT -p tcp -m multiport --dports 80,443 -j NETFLIX
-A NETFLIX -d 8.8.8.8/32 -p tcp -m multiport --dports 80,443 -j REDIRECT --to-ports 1234
COMMIT
# Completed on Tue Jan 19 10:16:17 2021
